add photoshoots-products linnks

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -12,6 +12,7 @@
     <div class="flex gap-6">
       <a href="/photoshoots" class="text-xs uppercase tracking-widest hover:text-electric-red transition-colors">Photoshoots</a>
       <a href="/artworks" class="text-xs uppercase tracking-widest hover:text-electric-red transition-colors">Artworks</a>
+      <a href="/shop" class="text-xs uppercase tracking-widest hover:text-electric-red transition-colors">Shop</a>
       <a href="/links" class="text-xs uppercase tracking-widest hover:text-electric-red transition-colors">Press</a>
       <a href="/contact" class="text-xs uppercase tracking-widest hover:text-electric-red transition-colors">Contact</a>
     </div>
