--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -2,6 +2,7 @@
 import MainLayout from "../layouts/MainLayout.astro";
 import { Y2KHero } from "../components/Y2KHero.jsx";
 import { LatestPhotoshoots } from "../components/LatestPhotoshoots.jsx";
+import { CategorySelection } from "../components/CategorySelection.jsx";
 import { fetchPhotoshoots, fetchKepka, getAssetUrl } from "../lib/directus";
 
 // Fetch the latest photoshoots with our helper function
@@ -15,6 +16,19 @@ if (kepkaData && kepkaData.hero_image) {
   kepkaData.hero_image = getAssetUrl(kepkaData.hero_image);
 }
 
+// Process cover images for categories
+if (kepkaData) {
+  if (kepkaData.photoshoots_cover) {
+    kepkaData.photoshoots_cover = getAssetUrl(kepkaData.photoshoots_cover);
+  }
+  if (kepkaData.paintings_cover) {
+    kepkaData.paintings_cover = getAssetUrl(kepkaData.paintings_cover);
+  }
+  if (kepkaData.products_cover) {
+    kepkaData.products_cover = getAssetUrl(kepkaData.products_cover);
+  }
+}
+
 // Get the page title from kepkaData or use a default
 const pageTitle = kepkaData?.title || "Jakub Kepka";
 
@@ -23,4 +37,5 @@ const pageTitle = kepkaData?.title || "Jakub Kepka";
 <MainLayout title={pageTitle}>
 	<Y2KHero kepkaData={kepkaData} client:load />
 	<LatestPhotoshoots photoshoots={photoshoots} client:load />
+	<CategorySelection kepkaData={kepkaData} client:load />
 </MainLayout>
