--- a/src/pages/photoshoots/[slug].astro
+++ b/src/pages/photoshoots/[slug].astro
@@ -3,6 +3,7 @@ import MainLayout from '../../layouts/MainLayout.astro';
 import { CloudinaryImage } from '../../components/ui/CloudinaryImage';
 import { Lightbox } from '../../components/ui/Lightbox';
 import { fetchPhotoshoots, fetchPhotoshootBySlug, getAssetUrl } from '../../lib/directus';
+import { marked } from 'marked';
 
 // The Photoshoot type isn't exported directly, recreate it here
 interface Photoshoot {
@@ -71,7 +72,7 @@ const hasProducts = photoshoot?.products && photoshoot.products.length > 0;
             </time>
             
             {photoshoot.description && (
-              <div class="prose prose-lg max-w-none mt-8" set:html={photoshoot.description} />
+              <div class="prose prose-lg max-w-none mt-8" set:html={marked.parse(photoshoot.description)} />
             )}
           </div>
           
