--- a/src/pages/links.astro
+++ b/src/pages/links.astro
@@ -81,7 +81,7 @@ const typeOrder = ["press", "video", "other"];
 <style>
   /* Link Preview Styling */
   :global(.link-preview) {
-    @apply relative overflow-hidden bg-gray-900/60 transition-transform duration-300 dark:bg-gray-800/30;
+    @apply relative overflow-hidden bg-gray-900 bg-opacity-60 transition-transform duration-300 dark:bg-gray-800 dark:bg-opacity-30;
     max-width: 100%;
     border-radius: 0.5rem;
     backdrop-filter: blur(10px);
