--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -44,7 +44,7 @@ const phoneNumber = kepkaData?.contact_phone || '+44 7939 049940';
             
             <div class="contact-item">
               <h2 class="heading">Studio</h2>
-              <p class="text">London, UK</p>
+              <p class="text">Warsaw, Poland</p>
             </div>
           </div>
         </div>
