--- a/src/pages/shop/index.astro
+++ b/src/pages/shop/index.astro
@@ -35,7 +35,7 @@ const pageTitle = "Shop | " + (kepkaData?.title || "Jakub Kepka");
           <img 
             src={coverImageUrl} 
             alt="Shop Cover" 
-            class="w-full h-full object-cover"
+            class="w-full h-full object-cover object-top"
           />
           {/* Dark overlay */}
           <div class="absolute inset-0 bg-black opacity-60"></div>
