fix md on artworks

--- a/src/layouts/MainLayout.astro
+++ b/src/layouts/MainLayout.astro
@@ -18,7 +18,7 @@ const currentPath = Astro.url.pathname;
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Jakub Kepka - Fashion Designer with Y2K/techno-inspired aesthetic, blending bold design with Polish sensibilities." />
+    <meta name="description" content="Jakub Kepka - Fashion Designer" />
     <title>{title} | Jakub Kepka</title>
     <ThemeScript />
     <link rel="preconnect" href="https://fonts.cdnfonts.com" />
