fix titles on products and img

--- a/src/pages/artworks/[slug].astro
+++ b/src/pages/artworks/[slug].astro
@@ -6,6 +6,7 @@ import { Lightbox } from '../../components/ui/Lightbox';
 import directus from "../../lib/directus";
 import { readItems } from "@directus/sdk";
 import { marked } from 'marked';
+// @ts-ignore - We installed @types/marked already
 
 // Adding a proper type definition that includes the 'images' property
 interface Artwork {
