--- a/src/pages/artworks/index.astro
+++ b/src/pages/artworks/index.astro
@@ -70,7 +70,7 @@ const getSizeClass = (index: number) => {
             alt="Artworks Cover"
             className="w-full h-full object-cover object-top"
             crop="scale"
-            gravity="north"
+            gravity="auto"
             fallback={getAssetUrl(paintingsCover)}
             client:load
           />
